--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Valcheque Technologies"
+      content="Futures Trading Terminal Software for Crypto Trading"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
