--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
     <title>Valcheq Technologies</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Crypto Futures Trading Terminals</noscript>
     <div id="root"></div>
   </body>
 </html>
