--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
     <meta
-      name="Valcheque Technologies"
+      name="Valcheq Technologies"
       content="Futures Trading Terminal Software for Crypto Trading"
     />
     <title>Valcheq Technologies</title>
